# hydrus_1d_agent

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  HANDOFF_TO_CODEX.md  README.md  RELEASE_NOTES.md  environment.yml  main.py  project_brief.md  pyproject.toml  requirements.txt
benchmarks/: manifest.csv
config/: csv_atmospheric_and_materials_test.json  csv_atmospheric_boundary_test.json  demo_two_layer_inundation.json  example_case.json  new_user_dynamic_csv_test.json  simple_atmospheric_case.json  simple_conservative_solute_case.json  simple_root_uptake_case.json  simple_runnable_case.json  two_layer_clay_sand_ponding_reviewed.json  two_layer_surface_water_review.json
docs/: benchmark_support_matrix.md  demo_workflows.md  full_example_sweep_report.md  getting_started_with_codex_or_claude_code.md  llm_assisted_json_configuration.md  llm_prompt_templates.md  simple_user_prompts.md  user_acceptance_tests.md  user_guide.md  using_with_llm_agents.md
hydrus_agent/: __init__.py  atmospheric_csv.py  benchmark.py  case.py  config_builder.py  env.py  field_comparison.py  input_writer.py  material_csv.py  output_reader.py  phydrus_adapter.py  pipeline.py  plotter.py  prompt_benchmark.py  qc.py  reporter.py  review_state.py  run_manifest.py  runner.py  scenario_analysis.py  scenario_runner.py  schema.py  scientific_reviewer.py  validator.py
scripts/: check_hydrus_environment.py  run_prompt_benchmark.py
skills/: README.md
templates/: placeholder.txt
tests/: conftest.py  test_atmospheric_csv.py  test_benchmark.py  test_cli.py  test_config_builder.py  test_llm_json_mode.py  (+16 more)
(+36 files in other folders)
